--- a/game-reversi-server/stack.yaml
+++ b/game-reversi-server/stack.yaml
@@ -1,4 +1,9 @@
 resolver: lts-11.22
 extra-deps:
+- servant-0.11
+- servant-server-0.11.0.1
+- servant-client-0.11
+- http-types-0.10
+- resourcet-1.1.11
 packages:
 - '.'
