Add print board to terminal

--- a/game-reversi-server/game-reversi-server.cabal
+++ b/game-reversi-server/game-reversi-server.cabal
@@ -21,6 +21,7 @@ library
                      , GameLogic.Util
                      , GameLogic.Grid
                      , GameLogic.Disc
+                     , GameLogic.Print
   ghc-options:       -Wall -fno-warn-unused-imports
   build-depends:       base
                      , aeson
