--- a/game-reversi-server/game-reversi-server.cabal
+++ b/game-reversi-server/game-reversi-server.cabal
@@ -64,5 +64,6 @@ executable game-reversi-server-exe
                   , servant-server
                   , text
                   , time
+                  , containers
                   , warp
   default-language: Haskell2010
